# matrix-guardian

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt
configs/: .env.example  settings.yaml
frontend/: .env.example  ARCHITECTURE.md  README.md  index.html  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: index.js
frontend/src/components/common/: Card.jsx  RiskBadge.jsx  StatusIndicator.jsx  index.js
frontend/src/components/config/: ConfigurationFlags.jsx  PolicyViewer.jsx  WorkerStatus.jsx  index.js
frontend/src/components/dashboard/: AgentDecisionGraph.jsx  AutopilotController.jsx  InterventionQueue.jsx  index.js
frontend/src/components/layout/: Header.jsx  Sidebar.jsx  index.js
frontend/src/components/modals/: SettingsModal.jsx  index.js
frontend/src/components/probes/: ProbesTable.jsx  index.js
frontend/src/components/threads/: ThreadCard.jsx  ThreadsList.jsx  index.js
frontend/src/constants/: index.js
frontend/src/data/: mockData.js
frontend/src/services/: api.js
frontend/src/views/: ConfigView.jsx  DashboardView.jsx  ProbesView.jsx  ThreadsView.jsx  index.js
infra/docker/: Dockerfile  compose.yaml
scripts/: autopilot_cron.sh
src/guardian/: __init__.py  autopilot_settings.py  config.py  logging.py  main.py
src/guardian/agents/: __init__.py  autopilot.py  graph.py  policy.py
src/guardian/agents/policies/: default_policy.yaml
src/guardian/agents/tools/: __init__.py  http_probe.py  mcp_echo.py
src/guardian/app/: __init__.py  api.py  dependencies.py
src/guardian/app/routes/: __init__.py  ai_settings.py  autopilot.py  config.py  health.py  probes.py  resume.py  threads.py
src/guardian/runner/: __init__.py  autopilot_worker.py
src/guardian/services/: __init__.py  jobs.py  matrix_ai_client.py  matrix_hub_client.py
tests/: __init__.py  test_autopilot_smoke.py
