# Matrix Guardian - Production-Ready Configuration
# Build system using modern standards compatible with UV (astral-sh)

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "matrix-guardian"
version = "1.0.0"
description = "AI Control Plane for the Matrix Ecosystem - Autonomous MCP Server Health Management"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Ruslan Magana", email = "contact@ruslanmv.com" }
]
maintainers = [
    { name = "Ruslan Magana", email = "contact@ruslanmv.com" }
]
keywords = [
    "ai",
    "control-plane",
    "mcp",
    "matrix",
    "autonomous",
    "monitoring",
    "health-check",
    "langgraph",
    "fastapi"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]

# Production dependencies with pinned versions for reproducibility
dependencies = [
    # Web framework
    "fastapi==0.115.0",
    "uvicorn[standard]==0.31.0",

    # HTTP client
    "httpx==0.27.2",

    # Data validation and settings
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",

    # Database
    "psycopg[binary]==3.2.3",

    # Logging
    "python-json-logger==2.0.7",

    # Retry logic
    "tenacity==9.0.0",

    # Agent orchestration
    "langgraph==0.2.40",
    "langchain-core==0.3.15",

    # Configuration
    "pyyaml==6.0.2",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "pytest-asyncio==0.24.0",
    "pytest-mock==3.14.0",
    "ruff==0.7.2",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
    "ipython==8.29.0",
]

# Type stubs for mypy
types = [
    "types-pyyaml==6.0.12.20240917",
    "types-requests==2.32.0.20240914",
]

# All optional dependencies combined
all = [
    "matrix-guardian[dev,types]",
]

[project.urls]
Homepage = "https://ruslanmv.com"
Documentation = "https://github.com/ruslanmv/matrix-guardian#readme"
Repository = "https://github.com/ruslanmv/matrix-guardian"
Issues = "https://github.com/ruslanmv/matrix-guardian/issues"
Changelog = "https://github.com/ruslanmv/matrix-guardian/releases"

[project.scripts]
# CLI entrypoints
matrix-guardian = "guardian.main:app"
guardian-worker = "guardian.runner.autopilot_worker:main"

# --- Hatchling Configuration ---
[tool.hatchling.build.targets.wheel]
packages = ["src/guardian"]

[tool.hatchling.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/configs",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

# --- Ruff Configuration (Linting & Formatting) ---
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "C90",    # mccabe complexity
    "N",      # pep8-naming
    "D",      # pydocstyle
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "BLE",    # flake8-blind-except
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ERA",    # eradicate
    "LOG",    # flake8-logging
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]

ignore = [
    "E501",    # line too long (handled by formatter)
    "D100",    # missing docstring in public module
    "D104",    # missing docstring in public package
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
    "ANN401",  # dynamically typed expressions (Any)
    "S101",    # use of assert
    "PLR0913", # too many arguments
    "TRY003",  # avoid specifying long messages outside exception class
    "TID252",  # prefer absolute imports (relative imports are fine for internal modules)
    "TC001",   # move into type-checking block (can reduce readability)
    "TC002",   # move into type-checking block
    "TC003",   # move into type-checking block
    "TRY401",  # redundant exception in logging (sometimes useful for clarity)
    "COM812",  # trailing comma (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "D",       # docstrings not required in tests
    "ANN",     # type annotations not required in tests
    "PLR2004", # magic values allowed in tests
    "ARG002",  # unused arguments allowed in test mocks
]
"__init__.py" = [
    "D104",    # missing docstring in public package
    "F401",    # unused imports (re-exports)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["guardian"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# --- MyPy Configuration (Type Checking) ---
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain_core.*",
]
ignore_missing_imports = true

# --- Pytest Configuration ---
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    "--cov=src/guardian",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

# --- Coverage Configuration ---
[tool.coverage.run]
source = ["src/guardian"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
